Changed data file

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				console.log( e );
 			});
 		};
-		updateData("data/labels.json");
+		updateData("data/data.json");
 
 		document.getElementById('randomizeData').addEventListener('click', function() {
 			lineChartData.datasets.forEach(function(dataset) {
