--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </head>
 
 <body>
-	<div style="width:75%;">
+	<div style="width:85%;">
 		<canvas id="canvas"></canvas>
 	</div>
-	<button id="randomizeData">Randomize Data</button>
+	<!-- <button id="randomizeData">Randomize Data</button> -->
 	<script>
 		lineChartData = {
 			labels: [],
@@ -35,7 +35,7 @@
 				yAxisID: 'y-axis-1',
 			}
 			,{
-				label: 'Deathes',
+				label: 'Deaths',
 				borderColor: window.chartColors.red,
 				backgroundColor: window.chartColors.red,
 				fill: false,
@@ -67,20 +67,43 @@
 					},
 					scales: {
 						yAxes: [{
-							type: 'linear', // only linear but allow scale type registration. This allows extensions to exist solely for log scale for instance
+							type: 'linear',
 							display: true,
 							position: 'left',
-							id: 'y-axis-1',
+                            id: 'y-axis-1',
+
+                            scaleLabel: {
+                                display: true,
+                                labelString: "Number of people"
+                            },
+
+                            ticks: {
+                                beginAtZero: true,
+                                stepSize: 1000
+                            }
 						}, {
-							type: 'linear', // only linear but allow scale type registration. This allows extensions to exist solely for log scale for instance
+							type: 'linear',
 							display: true,
 							position: 'right',
 							id: 'y-axis-2',
 
-							// grid line settings
+                            scaleLabel: {
+                                display: true,
+                                labelString: "Death rate"
+                            },
+
 							gridLines: {
-								drawOnChartArea: false, // only want the grid lines for one axis to show up
-							},
+								drawOnChartArea: false,
+                            },
+                            
+                            ticks: {
+                                beginAtZero: true,
+                                suggestedMax: 15,
+
+                                callback: function(value, index, values) {
+                                    return value + '%';
+                                }
+                            }
 						}],
 					}
 				}
@@ -89,7 +112,7 @@
 
 		function updateData(url){
 			$.getJSON(url, function(data){
-				console.log(lineChartData.datasets[0].data);
+                window.myLine.options.title.text = data.title;
 				lineChartData.labels = data.months;
 				lineChartData.datasets[0].data = data.cases;
 				lineChartData.datasets[1].data = data.deathes;
@@ -102,15 +125,15 @@
 		};
 		updateData("data/data.json");
 
-		document.getElementById('randomizeData').addEventListener('click', function() {
-			lineChartData.datasets.forEach(function(dataset) {
-				dataset.data = dataset.data.map(function() {
-					return randomScalingFactor();
-				});
-			});
+		// document.getElementById('randomizeData').addEventListener('click', function() {
+		// 	lineChartData.datasets.forEach(function(dataset) {
+		// 		dataset.data = dataset.data.map(function() {
+		// 			return randomScalingFactor();
+		// 		});
+		// 	});
 
-			window.myLine.update();
-		});
+		// 	window.myLine.update();
+		// });
 	</script>
 </body>
 
