--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162159072-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-162159072-1');
+	</script>
+
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 
@@ -9,6 +19,7 @@
 	<script src="dist/chartjs/2.9.3/Chart.min.js"></script>
 	<script src="dist/jquery/3.4.1/jquery-3.4.1.min.js"></script>
 	<script src="js/utils.js"></script>
+
 	<style>
 	canvas {
 		-moz-user-select: none;
