--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 
-	<title>Line Chart Multiple Axes</title>
+	<title>COVID-19 Graph</title>
 	<script src="dist/chartjs/2.9.3/Chart.min.js"></script>
 	<script src="dist/jquery/3.4.1/jquery-3.4.1.min.js"></script>
 	<script src="js/utils.js"></script>
