--- a/index.html
+++ b/index.html
@@ -15,20 +15,19 @@
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 
-	<title>COVID-19 Graph</title>
+	<title>www.chrisdima.io> COVID-19 Information</title>
 	<script src="dist/chartjs/2.9.3/Chart.min.js"></script>
 	<script src="dist/jquery/3.4.1/jquery-3.4.1.min.js"></script>
 	<script src="js/utils.js"></script>
 
 	<style>
-	canvas {
-		-moz-user-select: none;
-		-webkit-user-select: none;
-		-ms-user-select: none;
-	}
+		canvas {
+			-moz-user-select: none;
+			-webkit-user-select: none;
+			-ms-user-select: none;
+		}
 	</style>
 </head>
-
 <body>
 	<div>
 		<select id="states">
